57_filter_egress_traffic_fqdn/allow-egress-fqdn.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-egress-fqdn
spec:
  endpointSelector:
    matchLabels:
      run: nginx
  egress:
  - toFQDNs:
    - matchName: myservice.com
    - matchName: api.github.com
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s:k8s-app: kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: ANY
      rules:
        dns:
        - matchPattern: "*"
